--- a/angular.json
+++ b/angular.json
@@ -90,12 +90,20 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
+
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "001db9a7-57ea-4e1a-8950-efdbfd49a1a0"
   }
 }
